@@ -1,3 +1,8 @@
+Fri Jul 12 09:38:24 2002  George Lebl <jirka@5z.com>
+
+	* daemon/gdm.c: ensure descriptors 0,1 and 2 exist.  This may fix
+	  an issue running gdm out of /etc/ttys on freebsd.
+
 Thu Jul 11 17:50:15 2002  George Lebl <jirka@5z.com>
 
 	* gui/gdmwm.c: unfortunately when we do a reparent on an already
